--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "i18next": "^23.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
